<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutExercise">

    <HorizontalScrollView
        android:id="@+id/stories"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="105dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/icon" />


                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView89"
                    android:layout_width="105dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/icon" />


                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="119dp"
                    android:layout_height="113dp"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="115dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="125dp"
                    android:layout_height="114dp"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="125dp"
                    android:layout_height="113dp"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user5" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="577dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/stories"
        tools:layout_editor_absoluteX="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user6" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/landscape"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="6dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName1" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="3dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName2" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/com" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user7" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/landscape"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName1" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName2" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/com" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user8" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/landscape"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName1" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnName2" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/com" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>